--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI:mongodb://localhost:27017/Ushop?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
+MONGODB_URI:mongodb://localhost/Ushop
