--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI=mongodb://localhost/Ushop
+MONGODB_URI=mongodb+srv://moha:Mohashey813k@cluster0.5uvd2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_DB=Shop
