--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "axios": "^0.26.1",
     "js-cookie": "^3.0.1",
     "mongodb": "^4.4.1",
     "next": "12.1.0",
