cart functionality working

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://moha:Mohashey813k@cluster0.5uvd2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://moha:3Dz1HAGJeX6J9Fb9@cluster0.5uvd2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 MONGODB_DB=Shop
