--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "js-cookie": "^3.0.1",
     "mongodb": "^4.4.1",
+    "mongoose": "^6.2.8",
     "next": "12.1.0",
     "next-connect": "^0.12.2",
     "react": "17.0.2",
