--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://moha:3Dz1HAGJeX6J9Fb9@cluster0.5uvd2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 MONGODB_DB=Shop
+JWT_SECRET=chjhm2022utsa
