--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
-    "axios": "^0.26.1",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8",
     "next": "12.1.0",
-    "next-connect": "^0.12.2",
+    "next-connect": "^0.10.1",
+    "notistack": "^2.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.29.0"
   },
   "devDependencies": {
     "eslint": "8.11.0",
