--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
+    "mongoose": "^6.2.9",
     "next": "12.1.0",
     "next-connect": "^0.10.1",
     "notistack": "^2.0.3",
