--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://moha:3Dz1HAGJeX6J9Fb9@cluster0.5uvd2.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 MONGODB_DB=Shop
 JWT_SECRET=chjhm2022utsa
+PAYPAL_CLIENT_ID=AdMFLclqAU083Vjic3OcPzjxaZ4_2SlhXSAAHfIrPbldcWSnVuP2vrEpzLXur520tpbzwqjY-CX62WaG
