--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-connect": "^0.10.1",
     "notistack": "^2.0.3",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0"
   },
