--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGODB_URI=mongodb+srv://moha:3Dz1HAGJeX6J9Fb9@cluster0.5uvd2.mongodb.net/myFir
 MONGODB_DB=Shop
 JWT_SECRET=chjhm2022utsa
 PAYPAL_CLIENT_ID=AdMFLclqAU083Vjic3OcPzjxaZ4_2SlhXSAAHfIrPbldcWSnVuP2vrEpzLXur520tpbzwqjY-CX62WaG
+CLOUDINARY_CLOUD_NAME=ushop
+CLOUDINARY_API_KEY=744582835412182
+CLOUDINARY_API_SECRET=CXjs8hwysdC1u4rxyh1T_x-nurY
