--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@paypal/react-paypal-js": "^7.6.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.29.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
+    "multer": "^1.4.4",
     "next": "12.1.0",
     "next-connect": "^0.10.1",
     "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.29.0"
+    "react-hook-form": "^7.29.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "8.11.0",
