--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "moment": "^2.29.3",
     "mongodb": "^4.5.0",
     "multer": "^1.4.2",
-    "next": "11.0.1",
+    "next": "^12.1.5",
     "next-connect": "^0.10.1",
     "notistack": "^1.0.9",
     "react": "17.0.2",
