--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@paypal/react-paypal-js": "^7.6.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.4.1",
     "cloudinary": "^1.29.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
     "multer": "^1.4.4",
@@ -29,6 +31,7 @@
     "notistack": "^2.0.3",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
     "streamifier": "^0.1.1"
