--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "mongodb": "^4.5.0",
     "multer": "^1.4.2",
     "next": "^12.1.5",
